--- a/CoolBooks/Views/Home/Index.cshtml
+++ b/CoolBooks/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started home page adams testing</h2>
+        <h2>Getting started home page adams testing i m mad</h2>
         <p>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
             enables a clean separation of concerns and gives you full control over markup
