--- a/CoolBooks/Views/Home/Index.cshtml
+++ b/CoolBooks/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="jumbotron">
-    <img src="~/Images/coolbooksbgts.png" alt="CoolBooks"/>
+    <img src="~/Images/coolbooksbg.png" alt="CoolBooks"/>
     <p class="lead">Welcome to CoolBooks! Here you can find books that you <strong>will</strong> want to read</p>
     <p>Registered users can add books and reviews. Our administrators are experts on books. They constantly remove books. That is our strength, because here you will only find <strong>really</strong> cool books.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
