--- a/CoolBooks/Views/Home/Login.cshtml
+++ b/CoolBooks/Views/Home/Login.cshtml
@@ -1,33 +1,41 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Login";
 }
 
-@{
-    ViewBag.Title = "Login543535";
-}
+<div class="jumbotron">
+    <h1>CoolBooks</h1>
+    <p class="lead">Welcome to CoolBooks! Here you can find books that you <strong>will</strong> want to read</p>
+    <p>Registered users can add books and reviews. Our administrators are experts on books. They constantly remove books. That is our strength, because here you will only find <strong>really</strong> cool books.</p>
+    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+</div>
 
-<h2>Login</h2>
 
-<form method="post" asp-controller="Account" asp-action="Login"
-      asp-route-returnurl="@Model.ReturnUrl">
-    <div asp-validation-summary="ValidationSummary.ModelOnly"></div>
+<h1> Login </h1>
 
-    <div>
-        <label asp-for="Username"></label>
-        <input asp-for="Username" />
-        <span asp-validation-for="Username"></span>
-    </div>
+<form>
 
-    <div>
-        <label asp-for="Password"></label>
-        <input asp-for="Password" />
-        <span asp-validation-for="Password"></span>
-    </div>
-
-    <div>
-        <label asp-for="RememberMe"></label>
-        <input asp-for="RememberMe" />
-        <span asp-validation-for="RememberMe"></span>
-    </div>
-    <input type="submit" value="Login" />
-</form>        
+    Username <input type='text' name='username'> <br>
+    Password <input type='password' name='password'> <br>
+    <input type='button' value='login'>
+</form>
+    @*<div class="row">
+            <div class="col-md-4">
+                <h2>Getting started home page adams testing</h2>
+                <p>
+                    ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
+                    enables a clean separation of concerns and gives you full control over markup
+                    for enjoyable, agile development.
+                </p>
+                <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+            </div>
+            <div class="col-md-4">
+                <h2>Get more libraries</h2>
+                <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+                <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+            </div>
+            <div class="col-md-4">
+                <h2>Web Hosting</h2>
+                <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+                <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+            </div>
+        </div>*@
