--- a/CoolBooks/Views/Users/Create.cshtml
+++ b/CoolBooks/Views/Users/Create.cshtml
@@ -19,15 +19,16 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
+        
+       * @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">     
             @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
+       * @Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
@@ -55,6 +56,10 @@
         <div class="col-md-10">
             @Html.EditorFor(model => model.Picture, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Picture, "", new { @class = "text-danger" })
+            <form action="/action_page.php">
+                <input type="file" name="pic" accept="image/*">
+                @* <input type="submit"> *@
+            </form>
         </div>
     </div>
 
@@ -99,7 +104,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
+       * @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
@@ -115,7 +120,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Created, htmlAttributes: new { @class = "control-label col-md-2" })
+       @* @Html.LabelFor(model => model.Created, htmlAttributes: new { @class = "control-label col-md-2" }) 
         <div class="col-md-10">
             @Html.EditorFor(model => model.Created, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Created, "", new { @class = "text-danger" })
@@ -123,14 +128,16 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.IsDeleted, htmlAttributes: new { @class = "control-label col-md-2" })
+         @Html.LabelFor(model => model.IsDeleted, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <div class="checkbox">
                 @Html.EditorFor(model => model.IsDeleted)
                 @Html.ValidationMessageFor(model => model.IsDeleted, "", new { @class = "text-danger" })
             </div>
         </div>
+           *@
     </div>
+    
     @using CaptchaMvc.HtmlHelpers
     @Html.MathCaptcha() 
     @ViewBag.ErrorMessage 
