--- a/CoolBooks/Views/Users/Profile.cshtml
+++ b/CoolBooks/Views/Users/Profile.cshtml
@@ -1,17 +1,17 @@
 ﻿@model CoolBooks.Models.Users
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Profile";
 }
 
-<h2>Create</h2>
+<h2>Profile</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>Users</h4>
+    <h4>Edit your profile</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
@@ -144,7 +144,7 @@
     
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <input type="submit" value="Update" class="btn btn-default" />
         </div>
     </div>
 </div>
