Updated some things

--- a/CoolBooks/Views/Home/Contact.cshtml
+++ b/CoolBooks/Views/Home/Contact.cshtml
@@ -2,16 +2,17 @@
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h3>CoolPeople Inc.</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    One World Trade Center, 104:th floor<br />
+    285 Fulton Street<br />
+    Manhattan, New York City<br />
+    NY 10007<br />
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Phone:</strong> +1 (212) 314 1592<br />
+    <strong>Email:</strong> <a href="mailto:info@coolpeople.com">info@coolpeople.com</a><br />
+    <strong>Web:</strong> <a href="https://coolpeople.com">coolpeople.com</a><br />
 </address>
