--- a/CoolBooks/Views/Shared/_Layout.cshtml
+++ b/CoolBooks/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Donate", "Donate", "Home")</li>
+                    <li>@Html.ActionLink("Sign up", "Create", "AspNetUsers")</li>
                 </ul>
             </div>
         </div>
