--- a/CoolBooks/Views/Users/Create.cshtml
+++ b/CoolBooks/Views/Users/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model CoolBooks.Models.Users
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Sign up";
 }
 
-<h2>Create</h2>
+<h2>Sign up</h2>
 
 @using (Html.BeginForm()) 
 {
