Fuck you Adam for your help

--- a/CoolBooks/Views/Shared/_Layout.cshtml
+++ b/CoolBooks/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Donate", "Donate", "Home")</li>
                     <li>@Html.ActionLink("Profile", "Profile", "Users")</li>
+                    <li>@Html.ActionLink("Sign up", "SignUp", "AspNetUsers")</li>
                 </ul>
             </div>
         </div>
