--- a/CoolBooks/Views/Home/About.cshtml
+++ b/CoolBooks/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Our logo has a demon from hell in it.</p>
