--- a/CoolBooks/Views/Shared/_Layout.cshtml
+++ b/CoolBooks/Views/Shared/_Layout.cshtml
@@ -25,7 +25,9 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Donate", "Donate", "Home")</li>
                     <li>@Html.ActionLink("Profile", "Profile", "Users")</li>
+
                     <li>@Html.ActionLink("Sign up", "SignUp", "AspNetUsers")</li>
+                    <li>@Html.ActionLink("Books", "Create", "Books")</li>
                 </ul>
             </div>
         </div>
