--- a/CoolBooks/Views/Books/Details.cshtml
+++ b/CoolBooks/Views/Books/Details.cshtml
@@ -20,22 +20,11 @@
                 @Html.DisplayFor(model => model.Title)
             </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.AlternativeTitle)
-            </dt>
+           
 
-            <dd>
-                @Html.DisplayFor(model => model.AlternativeTitle)
-            </dd>
+         
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Part)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.Part)
-            </dd>
-
+          
             <dt>
                 @Html.DisplayNameFor(model => model.Description)
             </dt>
@@ -44,22 +33,9 @@
                 @Html.DisplayFor(model => model.Description)
             </dd>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.ISBN)
-            </dt>
+            
 
-            <dd>
-                @Html.DisplayFor(model => model.ISBN)
-            </dd>
-
-            <dt>
-                @Html.DisplayNameFor(model => model.PublishDate)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.PublishDate)
-            </dd>
-
+          
             <dt>
                 @Html.DisplayNameFor(model => model.ImagePath)
             </dt>
@@ -78,29 +54,23 @@
 
            
 
-            <dt>
-                @Html.DisplayNameFor(model => model.AspNetUsers.Email)
-            </dt>
-
-            <dd>
-                @Html.DisplayFor(model => model.AspNetUsers.Email)
-            </dd>
+          
 
             <dt>
-                @Html.DisplayNameFor(model => model.Authors.FirstName)
+               Author
             </dt>
 
             <dd>
                 @Html.DisplayFor(model => model.Authors.FirstName)
             </dd>
 
-            @*     <dt>
-        @Html.DisplayNameFor(model => model.Genres.Name)
+               <dt>
+               Genres
             </dt>
 
             <dd>
                 @Html.DisplayFor(model => model.Genres.Name)
-            </dd> *@
+            </dd> 
 
         </dl>
             </div>
