Stuff that is things

--- a/CoolBooks/Views/Books/Create.cshtml
+++ b/CoolBooks/Views/Books/Create.cshtml
@@ -12,6 +12,7 @@
     @Scripts.Render("~/bundles/jqueryval")
     
     
+
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
@@ -110,8 +111,9 @@
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" name ="n1" value="Create" class="btn btn-default" />
-                           
+                            <input type="submit" name="n1" value="Create" class="btn btn-default" />
+                            <input type="submit" name="n1" value="autofill" class="btn btn-default" />
+                            <button onclick="SearchBook()">Click me</button>
                         </div>
                     </div>
                 </div>
