--- a/CoolBooks/Views/Books/Create.cshtml
+++ b/CoolBooks/Views/Books/Create.cshtml
@@ -110,8 +110,9 @@
 
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" name ="n1" value="Create" class="btn btn-default" />
-                           
+                            <input type="submit" name="n1" value="Create" class="btn btn-default" />
+                            <input type="submit" name="n2" value="GetInfoIsbn" class="btn btn-default" />
+
                         </div>
                     </div>
                 </div>
