--- a/CoolBooks/Views/Books/Index.cshtml
+++ b/CoolBooks/Views/Books/Index.cshtml
@@ -49,10 +49,9 @@
             </td>
 
             <td>
-                @*   @Html.ActionLink("Edit", "Edit", new { id = item.Id }) | *@
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @*  @Html.ActionLink("Delete", "Delete", new { id = item.Id })*@
-            </td>
+                  @Html.ActionLink("Edit", "Edit", new { id = item.Id }) | 
+                @Html.ActionLink("View", "Details", new { id = item.Id }) |
+                 @Html.ActionLink("Delete", "Delete", new { id = item.Id })
         </tr>
         }
 
