--- a/CoolBooks/Views/Books/Index.cshtml
+++ b/CoolBooks/Views/Books/Index.cshtml
@@ -11,7 +11,7 @@
     <p>
         @Html.ActionLink("Create New", "Create", new { id = string.Empty }, new { @class = "btn btn-primary " })
     </p>
-    <table class="table table-striped" >
+    <table class="table" >
         <tr>
             <td>Title</td>
             <td>Description</td>
