change in index book page  and added link to home page

--- a/CoolBooks/Views/Books/Details.cshtml
+++ b/CoolBooks/Views/Books/Details.cshtml
@@ -76,7 +76,7 @@
                         <tr><td colspan="2"><B>USERNAME</B></td></tr>
                         <tr>
                             <td>
-                                @Html.TextArea("Review", new { maxlength = 500, style = "width:1000px; height:100px;" }) </td>
+                                @Html.TextArea("Review", new { maxlength = 500,  style = "width:100%; height:100px;"  }) </td>
                             border
                             <td>    @Html.ActionLink("Save", "Save", new { id = string.Empty }, new { @class = "btn btn-primary " })
 
