--- a/CoolBooks/Views/Shared/_Layout.cshtml
+++ b/CoolBooks/Views/Shared/_Layout.cshtml
@@ -28,6 +28,8 @@
 
                     <li>@Html.ActionLink("Sign up", "SignUp", "AspNetUsers")</li>
                     <li>@Html.ActionLink("Books", "Create", "Books")</li>
+                    <li>@Html.ActionLink("Authors", "Create", "Authors")</li>
+                    <li>@Html.ActionLink("Genres", "Create", "Genres")</li>
                 </ul>
             </div>
         </div>
