change  links to button in author and genre page.

--- a/CoolBooks/Views/Authors/Delete.cshtml
+++ b/CoolBooks/Views/Authors/Delete.cshtml
@@ -59,8 +59,8 @@
             @Html.AntiForgeryToken()
     
             <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Index")
+                <input type="submit" value="Delete" class="btn btn-primary" /> |
+                @Html.ActionLink("Back to List", "Index", new { id = string.Empty }, new { @class = "btn btn-primary " })
             </div>
         }
     </div>
