--- a/CoolBooks/Views/Genres/Create.cshtml
+++ b/CoolBooks/Views/Genres/Create.cshtml
@@ -1,9 +1,5 @@
 ﻿@model CoolBooks.Models.Genres
 
-@{
-    Layout = null;
-}
-
 <!DOCTYPE html>
 
 <html>
@@ -49,7 +45,7 @@
             </div>
     
             <div class="form-group">
-                @Html.LabelFor(model => model.IsDeleted, htmlAttributes: new { @class = "control-label col-md-2" })
+                @* @Html.LabelFor(model => model.IsDeleted, htmlAttributes: new { @class = "control-label col-md-2" })*@
                 <div class="col-md-10">
                     <div class="checkbox">
                         @Html.EditorFor(model => model.IsDeleted)
@@ -60,14 +56,14 @@
     
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Create" class="btn btn-default" />
+                    <input type="submit" value="Create" class="btn btn-primary" />
                 </div>
             </div>
         </div>
     }
     
     <div>
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Back to List", "Index", new { id = string.Empty }, new { @class = "btn btn-primary " })
     </div>
 </body>
 </html>
