--- a/CoolBooks/Views/Books/Details.cshtml
+++ b/CoolBooks/Views/Books/Details.cshtml
@@ -24,7 +24,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript">
         $(function () {
-            $('#Resume').keyup(function (e) {
+            $('#Comments').keyup(function (e) {
                 var max = 500;
                 var len = $(this).val().length;
                 var char = max - len;
